--- a/NSci253_LesPlan05.Rmd
+++ b/NSci253_LesPlan05.Rmd
@@ -439,9 +439,10 @@ ggplot(test, aes(x = Fa_prob, y = prcp_in)) +
   # plot the x, y points
   geom_point() +
   # make a smooth line through the points using a linear model
-  geom_smooth(method = "lm") +
+  geom_smooth(method = "lm", formula = y ~ exp(x))+
   # make the x-axis a log 10 axis & make log ticks along the bottom
   scale_x_log10() +
+ # scale_y_log10() +
   annotation_logticks(base = 10, sides = "b") +
   # black and white theme
   theme_bw() +
