--- a/NSci253_LesPlan06.Rmd
+++ b/NSci253_LesPlan06.Rmd
@@ -1,68 +1,66 @@
 ---
-title: "NSci233 Notes- Week 6"
+title: "NSci233 Notes- Week 12"
 author: "Charles Jason Tinant"
-date: "2/27/2018"
+date: "4/10/2018"
 output:
   pdf_document: default
   html_document:
     df_print: paged
-subtitle: Lesson Plan 4 - Precipitation Week 4 of 4 completed
+subtitle: Lesson Plan 6 - Infiltration Week 3 of 3
 fontsize: 12pt
 ---
 
 ## Important Updates
-* The midterm will consists of an open book and a closed book section. All exams I receive after 5 PM today are overdue and will receive a lower grade.  I'm not sure what to do about the open book exams that were not turned in...
+* PLEASE send the midterm if you have not done so already.  I will be checking them again this week.  I will be sending out a new schedule / syllabus soon with dates
 
-* Homework from Lesson Plans 1, 2, 3 is **due March 3rd** so that you are ready for the midterm.  Late homework will receive a lower grade.
+* April 17 will be a work session - I will not be in class.  The assignment is to complete this homework collaboratively.  Please feel free to use the code below.  Also, the book has graphs, equations, and discussion that will help with the homework.  The Rmd file has graphs that can be adapted to answer most of the questions.
 
-* We are adding another 30-minutes to class to give additional technical help (e.g. 9:00 - 12:30)
+* Homework from Lesson Plans 1, 2, 3, 4, 5 is **due April 3rd**.  Late homework will receive a lower grade.
+
+* We are going to cover Chapter 3 - Infiltration, this chapter, and Chapter 4 - soil moisture and evaporation, in two weeks.
 
 * The most recent versions of the lesson plans can be downloaded from https://github.com/cjtinant/NSci253_Notes 
 
-## Overview
-*Infiltration* is the passage of water through the surface of the soil via pores or small openings.  Infiltrated water is necessary for vegetative growth, recharges ground water, and reduces surface runoff.  Infiltration is also complex and difficult to quantify.  Approaches to quantifying infiltration include theoretical equations based on the physics of soil water movement, empirical equations with no physical significance, and in situ measurement methods.  In recent years computer technology has made the application of complex equations that describe infiltration processes more feasible.
-\newpage
-
 ##Student Learning Outcomes (SLOs) &  Lesson Goals:  
-- *SLO1: Students will demonstrate proficiency in the components of the hydrologic cycle: precipitation, infiltration, runoff, and evapotranspiration* - Students will be able to generally describe what causes precipitation, precipitation events, and rainfall frequency. 
+- *SLO1: Students will demonstrate proficiency in the components of the hydrologic cycle: precipitation, infiltration, runoff, and evapotranspiration* - Students will be able to generally describe physical characteristics of soils that lead to runoff and infiltration.
 
 - *SLO2: Students are able to analyze components of the hydrologic with computer software* - Students will be generally able to read  data into R, and perform some analysis using packages.  Students will will be able to read arguments of a package from R Documentation.
+\newpage
 
-## Reading Assignments
+## Overview
+Soil profiles are heterogeneous mixtures of solids, liquids, and gasses, and living things.  A first approach in understanding infiltration and soil water processes is to physically classify the soils.  Physical classification involves measuring or calculating sizes, volume, mass, and density of the soil particles and voids. 
 
+## Reading Assignment
 Chapter 2: Read sections 3.1 - 3.4.  Scan sections 3.5 - 3.8
 
-**Vocabulary**  
-Tunkashila le miya yelo.
-*Grandfather. This [miya]*
-Le anpetu khi wihinapu kichi.  Pilamaya. 
-*This day, the sun is rising.  I am grateful.*
-Kici oniya na wiconi tanmahel na icin.  
-*I have breath and life because of you*
-Taku iyaha ya kaga ki.  Le anpetu ki.  
-Mita kola wica ya waste na. Tunkashila.  
-Woceki ya mitawa ki.  
-Nahon wo, na wocekiya mitawa ohota yo,
-Hihanni waste.  
-*Bryant High Horse (author - transcriber)* 
-**Otakuye** - everything that moves  
+## Homework Assignment
+*Please work together and turn in as proof of attendance on April 18 (does not need to be complete to prove that you were in class)*
 
-## Homework 
-*working on it*
-1. Write the definition of the following terms: infiltration, soil water, saturated, hygroscopic soil water,
+1. A particular soil, called Sue, has a physical composition of 40% silt, 20% clay, and 40% sand.  What kind of soil is Sue?
 
-## Class Timeline - March 27th
-8:30 - Study Hall  
-9:00 - Questions on homework / technical issues  
-9:30 - Averaging precipitation over space and time  
-9:50 - Break (please be back in 10 minutes)    
-10:00 - Historic time trends  
-10:20 - Frequency Distributions  
-10:50 - Break (please be back in 10 minutes)    
-11:00 - Self-directed work  
-11:40 - Summary discussion    
-11:50 - Feedback to instructor 
-12:00 - IT Questions  
+2. What is the maximum depth of water that can be stored in the top 0.8 meter of a soil profile of Sue, which has a porosity of 0.4.  
+ *your answer should be somewhere between 25 to 35 cm*  
+Determine the volumetric soil water content if the degree of saturation is 35%.  
+ *your answer should be between 10% - 20%*  
+
+3. A sample of the soil named Sue is placed in a weighing container with a mass of 20 grams.  The weighing container plus soil is 150 grams.  The sample is then put into a drying oven for 24-hours at 104 centigrade.  The sample plus tin is cooled and reweighed.  The final mass is 125 grams.  What is the water content by mass?  
+ *your answer should be between 20% - 30%*  
+
+4. The dry bulk density of a soil sample of Sue is 1.68 grams per cubic cm. The density of particles was measured to be 2.8 grams per cubic cm.  Find the porosity of the soil profile. 
+*your answer should be exactly what was reported in problem 2*  
+Find the specific gravity of the soil particles. 
+ *your answer should be between 2.6 - 3.0*  
+Find the bulk density of a saturated soil sample.
+ *your answer should be between 2.0 - 2.3 grams/cc*  
+
+5. Corn needs about 30 inches of water per year to grow.  Western South Dakota gets less than 30 inches, so corn needs to be irrigated to grow in this part of the state.
+Figure 3.9 shows the wilting point of a soil named Sue is 1 inch per foot and the field capacity is 3.2 inches per foot.  
+What is the plant available water for this soil?
+ *should be greater than example because less clay in the soil*  
+Determine the amount of water needed to increase soil water content in the root zone (0.8 meters) of a soil named Sue from its wilting point (WP) to field capacity (FC).
+ *your answer should be more than the answer from the example of 3.6 because the root zone is bigger and PAW is greater*  
+
+6. Write the definition of the following terms: infiltration, percolation, interflow, soil water, void, saturated, field capacity, hygroscopic soil water, capillary action, bulk density, dry bulk density, soil particle density, specific gravity, root zone, wilting point, plant available water (PAW)
 \newpage
 
 ```{r setup, include=FALSE}
@@ -72,16 +70,15 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ## Lecture Notes with R-code
 ```{r library}
 # If you need to you should 'install.packages("here")'
-library("tidyverse") # load the tidyverse package 
-library("lubridate")
+# library("tidyverse") # load the tidyverse package 
+# library("lubridate")
+# library("janitor")
 library("here")
-library("janitor")
 here::here() # this checks where R thinks the working directory is...
 ```
 
 ### Soil Water Relationships
 * Soil profiles consist of heterogeneous mixtures of solid, liquid, and gaseous materials, and billions of microorganisms.  Solid materials include particles of different sizes, shapes, and mineral composition.    
-
 * Soil particles consist primarily of disintegrated and decomposed rock fragments.  These fragments are not created by simply crushing the rock.  Instead, there are biologically-mediated oxidation, carbonization, and hydration processes occurring to make soil.  
 
 * A first approach in understanding infiltration and soil water processes is *physical soil classification* based on the size of the soil particles.  We use clay, silt, and sand in soils classification.  Figures 3.1 and 3.2 show different soils classification approaches.  The size of the particles is important because the particles have interstial open spaces called *voids* or *pores* that hold water.  And because clay particles can hold onto water through *capillary action*.
@@ -102,10 +99,10 @@ The amount of soil water content in a soil can be found by either volume or mass
 $$\Theta_v = \frac{V_w}{V_t} = S*n$$
 Soil moisture content is the amount of moisture that fills soil pores.  The percentage of pores that are filled with water is called the *degree of saturation, S*.  The relationship between $S$, $n$, and  $\Theta_v$ is shown above.
 
-### Example 4.1
+### Example 3.1
 What is the maximum depth of water that can be stored in the top three feet of a soil profile with a porosity of 0.5.  Also, determine the volumetric soil water content if the degree of saturation is 60%.  
 
-```{r Example_4.1}
+```{r Example_3.1}
 # What is the maximum depth of water that can be stored in the top three
 # feet of a soil profile with a porosity of 0.5.  Also, determine the 
 # volumetric soil water content if the degree of saturation is 60%.
@@ -113,10 +110,10 @@ What is the maximum depth of water that can be stored in the top three feet of a
 # For max depth of stored water use vol_void = porosity * vol_tot
 
 # 1. find vol_tot in cubic inches
-depth_ft      <- 3
+depth_ft      <- 3      # ft
 depth_in      <- depth_ft * 12      # 12 in = 1 ft 
-area_sq_in    <- 1
-vol_tot_cu_in <- depth_in * area_sq_in 
+area_sq_in    <- 1         # square inch
+vol_tot_cu_in <- depth_in * area_sq_in    # cubic inches
 
 # 2. find the maximum volume of water that can be stored 
 porosity       <- 0.5
@@ -128,8 +125,8 @@ vol_void_in    <- vol_void_cu_in/area_sq_in
 # 4. find the amount of water in the soil at 60% saturation
 
 # for water content at 60% saturation use Theta_v = perc_sat * porosity
-perc_sat       <- 0.6
-Theta_v        <- perc_sat * porosity
+perc_sat       <- 0.6  # unitless
+Theta_v        <- perc_sat * porosity  # unitless
 ```
 
 The depth of water is `r format(print(vol_void_in))` inches and the volumetric soil water content at 60% saturation is `r format(print(Theta_v))` inches per inch (or cubic inches per cubic inch).  
@@ -144,10 +141,10 @@ $$\Theta_g = \frac{m_w}{m_s}$$
 
 The following example is typical for a soil lab technique.  
 
-### Example 4.2
+### Example 3.2
 A sample of soil is placed in a weighing container with a mass of 25 grams.  The weighing container plus soil is 140 grams.  The sample is then put into a drying oven for 24-hours at 104 centigrade.  The sample plus tin is cooled and reweighed.  The final mass is 120 grams.  What is the water content by mass.
 
-```{r example 4.2}
+```{r example_3.2}
 rm(list=ls()) # remove all of the list of variables
 
 # given
@@ -200,59 +197,54 @@ The dry bulk density of a soil sample is 84.24 lb/cu.ft, and the density of part
 ```{r example 3.3}
 rm(list=ls()) # remove all of the list of variables
 
-dens_dry  <-  84.24  # lb/cu.ft
-dens_part <- 168.48  # lb/cu.ft
+dens_dry_soil <-  84.24  # lb/cu.ft
+dens_part     <- 168.48  # lb/cu.ft
 
 # 1. SI units are much easier to work with, so change to SI using density of water
 # Density of water is: 1.0 g/cc = 62.4 lb/cu.ft
 dens_water_Imp <- 62.4  # lb/cu.ft for the Imperial Units density of water
 
-dens_dry  <-  dens_dry / dens_water_Imp  # changes it to g/cc
+# These are all in grams per cubic cm after unit conversion
+dens_dry_soil  <-  dens_dry_soil / dens_water_Imp  # changes it to g/cc
 dens_part <- dens_part / dens_water_Imp  # changes it to g/cc
-dens_water <- dens_water_Imp / dens_water_Imp # changes it to g/cc (a check)
+dens_water <- dens_water_Imp / dens_water_Imp # changes it to g/cc 
+# A check, dens_water should be 1.0)
 rm(dens_water_Imp) # removes the unneeded variable 
 
 # 2. Use the equation for porosity above
-porosity <- 1 - (dens_dry/dens_part)
+porosity <- 1 - (dens_dry_soil/dens_part)
 
-# 3. Specific gravity of the soil is now pretty easy because we are in SI units.
+# 3. Finding the specific gravity of the soil is now pretty easy 
+#    because we are in SI units.
 SpGrav_part <- dens_part / dens_water # unitless or  g/cc per g/cc
 
 # note that pure quartz sand is 2.65 and feldspar is 2.6, so this soil 
 # is most likely derived from a granite.  In contrast, an iron oxide has 
 # a specific gravity of about 5.0.
 
-# 4. Use the equation above for bulk density at saturation.
-# 4a. Note that density is mass per cubic centimeter, 
-# so find mass of water in 1 cubic centimeter of pores
- mass_water <- porosity * dens_water
- 
-# 4b. find the mass of 1 cubic centimeter of soil
- mass_dry <- dens_dry * 1 # g/cc * 1 cc
- 
-# 4c. consider the total mass is mass of dry sample + mass of water in pores.
-mass_sat_soil <- mass_dry + mass_water 
-dens_sat_soil <- mass_sat_soil / 1 # grams per cc
+# 4. Find density of saturated soil
+#    First find the mass of the water filling the voids
+mass_water_per_cc <- porosity * dens_water
+dens_sat_soil <- dens_dry_soil + mass_water_per_cc # grams per cc
 
+# you can take this back to Imperial units to check.  Note, we started 
+# with dry soil of 84 lb/ft3 and the particles weigh 168 lb/ft3
+dens_sat_soil_imp <- dens_sat_soil * 62.4 # lb/ft3 so looks good.
 ```
 
-The water content is `r format(print(perc_sat_mass))` (grams per gram).  
-
-The porosity of the soil profile is `r format(print(porosity))` (volume per volume).  The specific gravity of the soil particles is `r format(print(SpGrav_part))` grams per cubic centimeter.  The bulk density of a saturated soil sample is `r format(print(dens_sat_soil))`.
+The porosity of the soil profile is `r format(print(porosity))` (volume per volume).  The specific gravity of the soil particles is `r format(print(SpGrav_part))` grams per cubic centimeter.  The bulk density of a saturated soil sample is `r format(print(dens_sat_soil))` grams/cc or `r format(print(dens_sat_soil_imp))` lb/cubic ft
 
 ### Example 3.4 - Field capacity
-Determine the amount of water needed to increase soil water content in the root zone of a clay loam soil from a critical value of 50% of field capacity to field capacity.  The critical value is the point at which wilting occurs, the wilting point or WP.  Figure 3.9 shows the water holding capacity for different kinds of soils.  The figure shows that the wilting point for clay loam is 2 inches per foot of soil and the field capacity is 4 inches per foot of soil.
+Determine the amount of water needed to increase soil water content in the root zone (2 feet) of a clay loam soil from a critical value of 50% of field capacity to field capacity.  The critical value is the point at which wilting occurs, the wilting point or WP.  Figure 3.9 shows the water holding capacity for different kinds of soils.  The figure shows that the wilting point for clay loam is 2 inches per foot of soil and the field capacity is 4 inches per foot of soil.
 
 ```{r example 3.4}
-rm(list=ls()) # remove all of the list of variables
+rm(list = ls()) # remove all of the list of variables
 
-dens_dry  <-  84.24  # lb/cu.ft
-dens_part <- 168.48  # lb/cu.ft
+wilt_point  <- 2   # inches water per foot soil
+field_cap   <- 3.8 # inches water per foot soil
+PAW         <- field_cap - wilt_point
+wat_need_in_per_ft <- field_cap - wilt_point # inches water per foot soil
 
-# 1. SI units are much easier to work with, so change to SI using density of water
-# Density of water is: 1.0 g/cc = 62.4 lb/cu.ft
+root_zone_ft     <- 2 # ft
+wat_need_rootzone <- wat_need_in_per_ft * root_zone_ft
 ```
-
-
-
-
